# Troostwatch

./: .flake8  .gitignore  .importlinter  .pr_body.txt  .safety-project.ini  .venv_packages.txt  AGENTS.md  CHANGELOG.md  PR_DESCRIPTION.md  README.md  config.json  install-python314.ps1  openapi.json  package-lock.json  pr_body_old.txt  pr_comment_for_github.md  pr_followup.md  pyproject.toml  requirements.txt  setup-env.ps1  training.db  troostwatch.db
.apm/: metadata.json
.apm/guides/: Project_Breakdown_Guide.md  Task_Assignment_Guide.md
.devcontainer/: devcontainer.json
.github/: api-agent.md  lint-agent.md  pull_request_template.md  test-agent.md
.github/agents/: AGENTS.md  analytics-agent.md  api-agent.md  cli-agent.md  docs-agent.md  interfaces-agent.md  lint-agent.md  migration-agent.md  observability-agent.md  parser-importer-agent.md  script-agent.md  services-agent.md  test-agent.md  ui-agent.md
.github/prompts/: apm-3-initiate-implementation.prompt.md  apm-7-delegate-research.prompt.md  apm-8-delegate-debug.prompt.md
.github/workflows/: ci.yml  python-tests.yml
chrome-extension/: README.md  manifest.json  popup.html  popup.js
docs/: ENV_SETUP.md  README.md  api.md  api_route_service_mapping.md  architecture.md  contributing.md  db.md  feature_status.md  grafana_dashboard.md  image_pipeline_roadmap.md  migration_policy.md  ml_training.md  observability.md  review_checklist.md  sync.md  versioning.md
examples/: bids_sample.csv  config.example.json
label_ocr_api/: README.md  main.py  requirements.txt
label_ocr_api/models/: README.md  label_classifier.pkl  label_classifier_real.pkl
migrations/: 0001_add_lots_columns.sql  0002_add_brand_and_bid_history.sql  0003_add_reference_prices.sql  0004_add_reference_prices_table.sql  0005_add_parent_id_to_specs.sql  0006_add_ean_and_spec_templates.sql  0007_add_release_date_and_category.sql  0008_add_lot_images.sql  0009_add_code_approval.sql  0010_add_image_phash.sql  0011_add_ml_training_runs.sql
schema/: schema.sql
scripts/: _flake_sweep.py  analyze_token_labels.py  bulk_label_tokens.py  check_imports.py  check_schema.py  convert_tokens_to_training.py  export_tokens_to_label.py  export_type_category_analysis.py  fetch_lot_images.py  fetch_lot_images.py.bak  fetch_lots_local.py  fetch_lots_local.py.bak  fetch_via_browser.py  fetch_via_browser.py.bak  fetch_with_playwright.py  fetch_with_playwright.py.bak  firstrun.py  generate_real_training_data.py  generate_real_training_data.py.bak  generate_training_data.py  generate_training_from_snapshots.py  label_tokens.py  label_tokens.py.bak  manual_label_tokens.py  process_saved_lot_pages.py  process_saved_lot_pages.py.bak  train_label_classifier.py  train_label_classifier.py.bak
scripts/chrome-extension-auction-analyzer/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
tests/: test_add_lot_cli.py  test_bidding_service.py  test_dummy.py  test_extract_label_endpoint.py  test_http_client.py  test_live_runner.py  test_menu_cli.py  test_parsers.py  test_preferences.py  test_sync_cli_selection.py  test_sync_failures.py  test_sync_logging.py  test_sync_multi.py  test_sync_pagination.py  test_tracing.py  test_view_cli.py  test_ws_messages.py
tests/cli/: test_buyer_cli.py
tests/domain/: test_lot_model.py
tests/services/: test_lot_view_service.py
training_data/: training_data.json
training_data/captured/: A1-39499-1.html  A1-39499-10.html  A1-39499-11.html  A1-39499-12.html  A1-39499-13.html  A1-39499-14.html  A1-39499-15.html  A1-39499-16.html  A1-39499-17.html  A1-39499-171.html  A1-39499-18.html  A1-39499-188.html  A1-39499-189.html  A1-39499-19.html  A1-39499-190.html  A1-39499-191.html  A1-39499-192.html  A1-39499-193.html  A1-39499-2.html  A1-39499-20 (1).html  A1-39499-20.html  A1-39499-208.html  A1-39499-210.html  A1-39499-268.html  A1-39499-289.html  A1-39499-307.html  A1-39499-311.html  A1-39499-340.html  A1-39499-341.html  A1-39499-342.html  A1-39499-350.html  A1-39499-370.html  A1-39499-4.html  A1-39499-427.html  A1-39499-460.html  A1-39499-5.html  A1-39499-55.html  A1-39499-59.html  A1-39499-6.html  A1-39499-69.html  (+4 more)
troostwatch/: __init__.py  config.py  db.py  debug_tools.py  http_client.py  logging_utils.py
troostwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
troostwatch/analytics/: __init__.py  (+1 more)
ui/: openapi.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+213 files in other folders)
